# SIC-XE-Assembler

./: CMakeLists.txt  Project_Structure.txt  README.md  example.txt
bindings/: sicxe_bindings.cpp
include/: ErrorHandler.hpp  LiteralTable.hpp  ObjectWriter.hpp  OpcodeTable.hpp  Pass1.hpp  Pass2.hpp  ProgramBlock.hpp  SymbolTable.hpp  Types.hpp
python/: api.py  assembler_wrapper.py  sicxe_parser.py
src/: ErrorHandler.cpp  LiteralTable.cpp  ObjectWriter.cpp  OpcodeTable.cpp  Pass1.cpp  Pass2.cpp  ProgramBlock.cpp  SymbolTable.cpp  main.cpp
tests/: conftest.py  test_integration.py  test_pass1.py
